Fixed some spacing, preparing for GitHub pages

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -16,7 +16,7 @@ html, body {
     height: 14%;
     background-color: peachpuff; /*did coral which looked ok*/
     margin: 0;
-    margin-top: auto;
+    margin-top: 300px;
     padding: 10px 0;
     font-family: 'Inter', sans-serif; 
     color: black;
